<resources>
    <string name="app_name">BookingApplication</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="join_now">Join Now</string>
    <string name="sign_in_to_booking">Sign in to Booking</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_acount">Already have an acount?</string>
    <string name="phone_number">Phone number</string>
    <string name="home_address">Home address</string>
    <string name="account_type">AccountType</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="old_password">Old password</string>
    <string-array name="account_types">
        <item>Host</item>
        <item>Guest</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_heart">Favourites</string>
    <string name="title_account">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_host_properties">My properties</string>
    <string name="title_added_properties">Properties</string>
    <string name="title_reported_users">Reported</string>
    <string name="title_comments">Comments</string>
    <string name="title_logout">Logout</string>
    <string name="save_button">Save</string>
    <string name="title_add">Comment</string>
    <string name="apartment_title">Suncev Breg</string>
    <string name="apartment_desc">Srbija, Novi Sad\n19. - 24. may\n$202 per night</string>
    <string name="apartment_review">Rating: 4.6\n200 reviews</string>
    <string name="accommodation_address">Srbija, Novi Sad, Banovic Strahinje 13</string>
    <string name="accommodation_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </string>
    <string name="accommodation_approving_btn_approve">Approve</string>
    <string name="accommodation_approving_btn_decline">Decline</string>
    <string-array name="sort_arrays">
        <item>ASC</item>
        <item>DSC</item>
    </string-array>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="filter">Filter </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apartment_detail_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a
        galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="amentities">- Internet\n- Parking\n- Air condition\n- Breakfast\n</string>
    <string name="delete_btn">Delete</string>
    <string name="amenities_title">Amenities</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal code</string>
    <string name="property_name">Property name</string>
    <string name="description">Description: </string>
    <string name="turn_on_off_title">Turn on/off notifications</string>
    <string name="notification_reservation_req">Reservation request</string>
    <string name="notificaiton_reservation_req_respond">Reservation request respond</string>
    <string name="reservation_created">Reservation created</string>
    <string name="reservation_cancelled">Reservation cancelled</string>
    <string name="reviews">Reviews</string>
    <string name="cancellation_policy">Cancellation policy</string>
    <string name="payment_method">Payment method</string>
    <string name="reservation_confirmation_method">Reservation confirmation method</string>
    <string name="min_guests">Min guests</string>
    <string name="max_guests">Max guests</string>
    <string name="parking">Parking</string>
    <string name="wifi">Wifi</string>
    <string name="amenities">Amenities</string>
    <string name="tv">TV</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="pool">Pool</string>
    <string name="dinner">Dinner</string>
    <string name="air_condition">Air condition</string>
    <string name="kitchen">Kitchen</string>
    <string name="hotel">Hotel</string>
    <string name="apartment">Apartment</string>
    <string name="both_options">Both options</string>
    <string name="create_accommodation">Create accommodation</string>
    <string name="update_accommodation">Update accommodation</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="price_for_entire_accommodation">Price for entire accommodation</string>
    <string name="accommodation_type">Accommodation type</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="block">Block</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="decline">Decline</string>
    <string name="report">Report</string>
    <string name="search">Search</string>
    <string name="reservation_status">Reservation status</string>
    <string name="host">Host: </string>
    <string name="where">Where</string>
    <string name="reported_user">Reported user: </string>
    <string name="reason">Reason: </string>
    <string name="reporting_user">Reporting user: </string>
    <string name="date">Date: </string>
    <string name="report_user_btn">Report user</string>
    <string name="approve">Approve</string>
    <string name="accommodation">Accommodation</string>
    <string name="annual_analytic">Annual analytic</string>
    <string name="year">Year</string>
    <string name="filter_text">Filter</string>
    <string name="analytics_for_all_accommodations">Analytics for all accommodations</string>
    <string name="analytics">Analytics</string>
    <string name="price_text">Price: </string>
    <string-array name="accommodation_types">
        <item>HOTEL</item>
        <item>APARTMENT</item>
    </string-array>
    <string-array name="cancellation_policies">
        <item>HOURS24</item>
        <item>HOURS48</item>
        <item>HOURS72</item>
        <item>NON_REFUNDABLE</item>
    </string-array>
    <string-array name="reservation_methods">
        <item>AUTOMATIC</item>
        <item>MANUAL</item>
    </string-array>
    <string-array name="reservation_status">
        <item>ALL</item>
        <item>PENDING</item>
        <item>ACCEPTED</item>
        <item>EXPIRED</item>
        <item>DECLINED</item>
        <item>CANCELLED</item>
    </string-array>
    <string-array name="comment_type_options">
        <item>Accommodation</item>
        <item>Host</item>
    </string-array>
    <string-array name="approve_comments_options">
        <item>Approve</item>
        <item>View reported</item>
    </string-array>
    <string name="comments_title">Comments</string>
    <string name="options">Options</string>
    <string name="report_comment">Report</string>
    <string name="delete_comment">Delete</string>
    <string name="report_comment_title">Report comment</string>
    <string name="report_reason_text">Report reason:  </string>
    <string name="date_range">Date range</string>
    <string name="add_comment_title">Add comment</string>
    <string name="add_comment_hint">Add comment..</string>
</resources>