<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/addedPropertiesFragment"
        android:icon="@drawable/bed"
        android:title="@string/title_added_properties"/>
    <item
        android:id="@+id/reportedUsersFragment"
        android:icon="@drawable/flag"
        android:title="@string/title_reported_users"/>
    <item
        android:id="@+id/commentsFragment"
        android:icon="@drawable/comment"
        android:title="@string/title_comments"/>
    <item
        android:id="@+id/accountAdminFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/title_account" />
</menu>