<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bookingapplication.activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_apartmentDetailsFragment"
            app:destination="@id/apartmentDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.bookingapplication.activities.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bookingapplication.activities.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/reservationsFragment"
        android:name="com.example.bookingapplication.activities.ui.reservations.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations" />
    <fragment
        android:id="@+id/reportedUsersFragment"
        android:name="com.example.bookingapplication.activities.ui.reportedUsers.ReportedUsersFragment"
        android:label="Reported Users"
        tools:layout="@layout/fragment_reported_users" />
    <fragment
        android:id="@+id/hostPropertiesFragment"
        android:name="com.example.bookingapplication.activities.ui.hostProperties.HostPropertiesFragment"
        android:label="Properties"
        tools:layout="@layout/fragment_host_properties" />
    <fragment
        android:id="@+id/commentsFragment"
        android:name="com.example.bookingapplication.activities.ui.comments.CommentsFragment"
        android:label="Comments"
        tools:layout="@layout/fragment_comments" />
    <fragment
        android:id="@+id/addedPropertiesFragment"
        android:name="com.example.bookingapplication.activities.ui.addedProperties.AddedPropertiesFragment"
        android:label="Added properties"
        tools:layout="@layout/fragment_added_properties" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.bookingapplication.activities.LoginActivity"
        android:label="LoginActivity" />
    <fragment
        android:id="@+id/apartmentDetailsFragment"
        android:name="com.example.bookingapplication.activities.ui.apartmentDetails.ApartmentDetailsFragment"
        android:label="fragment_apartment_details"
        tools:layout="@layout/fragment_apartment_details" />
</navigation>