<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ProductsPage"
        >

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/propertyName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/where"
                app:counterEnabled="false"
                app:startIconDrawable="@drawable/search"
                app:endIconMode="clear_text"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions|textVisiblePassword"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            >
            <Button
                android:id="@+id/startDateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp"
                android:textColor="@color/dark_blue"
                android:text="@string/start_date"
                app:icon="@drawable/ic_date"
                style="@style/CustomOutlinedButtonIcon"
                />

            <Button
                android:id="@+id/endDateBtn"
                style="@style/CustomOutlinedButtonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:textColor="@color/dark_blue"
                android:text="@string/end_date"
                app:icon="@drawable/ic_date" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/dssd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/filterButton"
                android:layout_width="100dp"
                android:layout_height="56dp"
                android:layout_weight="0.5"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/dark_blue"
                android:text="@string/filter_text"
                style="@style/CustomOutlinedButtonIcon" />

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="100dp"
                android:layout_height="56dp"
                android:layout_weight="0.5"
                android:layout_marginTop="8dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/dark_blue"
                android:text="@string/search"
                style="@style/CustomOutlinedButtonIcon" />


        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:id="@+id/scroll_products_list">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" >

                <ProgressBar
                    android:id="@+id/loadingPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />
            </RelativeLayout>
        </RelativeLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


