<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.hostReservations.ReservationsHostCardsListFragment">
    <LinearLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/propertyName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="@id/createAccommodation"
            app:layout_constraintStart_toStartOf="@id/createAccommodation"
            app:layout_constraintTop_toBottomOf="@id/createAccommodation"
            android:hint="@string/search"
            app:counterEnabled="false"
            app:startIconDrawable="@drawable/search"
            app:endIconMode="clear_text"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textNoSuggestions|textVisiblePassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="top">
        <Button
            android:id="@+id/startDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="2dp"
            android:textColor="@color/dark_blue"
            android:text="@string/start_date"
            app:icon="@drawable/ic_date"
            style="@style/CustomOutlinedButtonIcon"
            />

        <Button
            android:id="@+id/endDateBtn"
            style="@style/CustomOutlinedButtonIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="2dp"
            android:textColor="@color/dark_blue"
            android:text="@string/end_date"
            app:icon="@drawable/ic_date" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="top">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reservationStatus"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/description"
            app:layout_constraintStart_toStartOf="@id/description"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_marginTop="10dp"
            android:hint="@string/reservation_status"
            >
            <AutoCompleteTextView
                android:id="@+id/statusTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="100dp"
            android:layout_height="56dp"
            android:layout_weight="0.5"
            android:layout_marginTop="8dp"
            android:textColor="@color/dark_blue"
            android:text="@string/search"
            style="@style/CustomOutlinedButtonIcon" />


    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="190dp"
        tools:listitem="@layout/reservation_host_card"
         />

</FrameLayout>